--- a/week-7-A.Rmd
+++ b/week-7-A.Rmd
@@ -25,18 +25,42 @@ Define the parameter H as the average number of hours of work reported by studen
 
 **Prompt:** Create a tibble called `q_resamples` with three columns: `splits`, `id` and `boot`.  The first two columns are created automatically when you use `rsample::bootstraps()`. The last variable is a list column which includes a tibble with resampled data from `qscores`. There only column you need to keep from `qscores` is `hours`. Refer to Chapter 7 in the *The Primer* for hints.
 
+```{r sc1, cache = TRUE}
+q_resamples <- qscores %>%
+  select(hours) %>%
+  bootstraps(times = 1000) %>%
+  mutate(boot = map(splits, ~analysis(.)))
+
+q_resamples
+
+```
 
 
 ## Scene 2
 
 **Prompt:** Add two more columns to `q_resamples`: `hours_sampled` (the vector of hours pulled from each row of `boot`) and `mean_hours` (the mean of each `hours_sampled`). 
 
+```{r sc2}
+q2 <- q_resamples %>%
+         mutate(hours_sampled = map(boot, ~.$hours),
+                # hours_sampled = map(boot, ~pull(., hours))
+         mean_hours = map_dbl(hours_sampled, ~mean(.)))
 
+```
 
 
 ## Scene 3
 
 **Prompt:** Create a graphic of the posterior probability distribution for H. Interpret it.
+```{r sc3}
+ggplot(q2, aes(x = mean_hours, y = after_stat(count/sum(count)))) + 
+  geom_histogram(binwidth = 0.005, fill = 'chartreuse') +
+  geom_density() + 
+  labs(title = "Posterior Distribution for the Mean Hours in College Courses",
+       x = 'Mean Hours',
+       y = 'Probability')
+
+```
 
 
 
